@@ -3415,20 +3415,55 @@ private:
         How2List = INSNEW;
     }
 
-    template <class P>
-    inline void DeleteFromList(P &path, std::vector<int> &places)
+    template <class P, class T = int>
+    inline void DeleteFromList(P &path, std::vector<T> &places)
     {
-        for(size_t loop = places.size(); loop--> 0;)
-        path.erase(path.begin() + places[loop]);
+        size_t baseId = 0;
+        for (size_t copyId = 0, rightId = 0, endId = path.size(), lastId = places.size(); copyId < endId; ++copyId)
+        {
+            if (baseId != static_cast<size_t>(places[rightId]))
+            {
+                if (baseId != copyId)
+                {
+                    path[baseId] = std::move(path[copyId]);
+                }
+                ++baseId;
+            }
+            else
+            {
+                if (rightId < lastId)
+                {
+                    ++rightId;
+                }
+            }
+        }
+        path.resize(baseId);
         How2List = DEL;
     }
-    template <class P>
-    inline void DeleteFromListIDFix(P &path, std::vector<int> &places)
+    template <class P, class T = int>
+    inline void DeleteFromListIDFix(P &path, std::vector<T> &places)
     {
-        for(size_t loop = places.size(); loop--> 0;)
-        path.erase(path.begin() + places[loop]);
-        for(size_t loop = path.size(); loop--> places.front();) // ID Fix
-        path[loop].ID = loop;
+        size_t baseId = 0;
+        for (size_t copyId = 0, rightId = 0, endId = path.size(), lastId = places.size(); copyId < endId; ++copyId)
+        {
+            if (baseId != static_cast<size_t>(places[rightId]))
+            {
+                if (baseId != copyId)
+                {
+                    path[baseId] = std::move(path[copyId]);
+                    path[baseId].ID = baseId;
+                }
+                ++baseId;
+            }
+            else
+            {
+                if (rightId < lastId)
+                {
+                    ++rightId;
+                }
+            }
+        }
+        path.resize(baseId);
         How2List = DEL;
     }
 
