@@ -13,6 +13,9 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2021.5.23[/b]:
+-Faster erasure of multiple items from lists.
+
 Version [b]2021.5.9[/b]:
 -Updated technology effect attribute list for DE2.
 -Updated armor list defaults for DE2.
